move_chunk_large_chunk_map_workloads no longer reports timing breakdown of chunk migration due to server logging changes

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v6.0
    • Sharding EMEA 2022-07-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The changes from 8dda613 as part of SERVER-61078 switched a log line from logv2::LogComponent::kShardMigrationPerf to logv2::LogComponent::kShardingMigration. This broke an internal Python script for parsing the server's structured log messages and matching up the start of the critical section log line with the end of the critical section log line.

            Assignee:
            Enrico Golfieri
            Reporter:
            Max Hirschhorn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: