SERVER-67535 move_chunk_large_chunk_map_workloads no longer reports timing breakdown of chunk migration due to server logging changes