src/mongo/db/s/migration_source_manager.cpp
@@ -679,7 +679,7 @@ void MigrationSourceManager::commitChunkMetadataOnConfig() {
 
     _stats.totalCriticalSectionCommitTimeMillis.addAndFetch(t.millis());
 
-    LOGV2(4817403,
+    LOGV2(6107801,
           "Exiting commit critical section",
           "migrationId"_attr = _coordinator->getMigrationId(),
           "durationMillis"_attr = t.millis());
@@ -800,6 +800,12 @@ void MigrationSourceManager::_cleanup(bool completeMigration) noexcept {
     }();
 
     if (_state == kCriticalSection || _state == kCloneCompleted || _state == kCommittingOnConfig) {
+        LOGV2_DEBUG_OPTIONS(4817403,
+                            2,
+                            {logv2::LogComponent::kShardMigrationPerf},
+                            "Finished critical section",
+                            "migrationId"_attr = _coordinator->getMigrationId());
+
         LOGV2(6107802,
               "Finished critical section",
               "migrationId"_attr = _coordinator->getMigrationId(),
